# mpi-tests

./: CMakeLists.txt  p2p.cpp  put-get.cpp  run.sh  send-device.cpp  send-receive.cpp  send-shared.cpp  test-all.sh
.github/workflows/: ci.yml
